# ArrayUtil

./: .gitignore  CMakeLists.txt  README.md
include/ArrayUtil/: ArrayView.hpp  CArray.hpp  CImpl.hpp  CView.hpp  RArray.hpp  RView.hpp
include/array_util/: base.hpp  comptime_array.hpp  comptime_base.hpp  comptime_view.hpp
test/: ArrayView.cpp  CArray.cpp  CView_multi_dimension.cpp  CView_one_dimension.cpp  C_multi_dimension.cpp  C_one_dimension.cpp  RView_one_dimension.cpp  test.cpp
